@@ -1,4 +1,5 @@
 ﻿- Add additional public method calls for interfacing with other mods
+- Update translation framework
 
 
 Version 2.2.2
